--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "mini-css-extract-plugin": "^0.8.0",
     "node-sass": "^4.13.0",
     "sass-loader": "^7.3.1",
+    "serialize-javascript": ">=2.1.1",
     "style-loader": "^1.0.1",
     "ts-loader": "^6.2.1",
     "typescript": "^3.7.3",
